5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1636_2450.log
== TEST (2019-04-03 19:13:08) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 > nome2):
	msg = nome2 + nome1
else:
	msg = nome1 + nome2
print(msg)
-- OUTPUT:
AdaLeon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:14:16) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 > nome2):
	msg = 'nome2 ' + 'nome1'
else:
	msg = 'nome1 ' + 'nome2'
print(msg)
-- OUTPUT:
nome1 nome2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:14:46) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 > nome2):
	msg = nome2_nome1
else:
	msg = nome1_nome2
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    msg = nome1_nome2
NameError: name 'nome1_nome2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:48:32) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 > nome2):
	msg = nome2_nome1
else:
	msg = nome1_nome2
print(msg.upper())
-- EXECUTION TIME:
0.263502
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2450/main.py", line 6, in <module>
    msg = nome1_nome2
NameError: name 'nome1_nome2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:48:48) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 > nome2):
	msg = nome2_nome1
else:
	msg = nome1_nome2
print(msg.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    msg = nome1_nome2
NameError: name 'nome1_nome2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:50:50) 
-- CODE:
nome1 = input("Nome 1: ".upper())
nome2 = input("Nome 2: ")
if (nome1 > nome2):
	msg = nome2_nome1
else:
	msg = nome1_nome2
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    msg = nome1_nome2
NameError: name 'nome1_nome2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:53:21) 
-- CODE:
nome1 = input("Nome 1: ".upper())
nome2 = input("Nome 2: ")
if (nome1 > nome2):
	print(nome2)
	print(nome1)
else:
	print(nome1)
	print(nome2)
-- OUTPUT:
NOME 1: Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:54:11) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 > nome2):
	print(nome2.upper())
	print(nome1)
else:
	print(nome1)
	print(nome2.upper())
-- OUTPUT:
Ada
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:56:48) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 > nome2):
	print(nome2)
	print(nome1)
else:
	print(nome1)
	print(nome2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:57:17) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 > nome2):
	print(nome2)
	print(nome1)
else:
	print(nome1)
	print(nome2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:58:55) 
-- CODE:
nome1 = input("Nome 1: ".upper())
nome2 = input("Nome 2: ".upper())
if (nome1 > nome2):
	print(nome2)
	print(nome1)
else:
	print(nome1)
	print(nome2)
-- OUTPUT:
NOME 1: NOME 2: Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:59:51) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 > nome2):
	print(nome2.upper())
	print(nome1)
else:
	print(nome1)
	print(nome2.upper())
-- OUTPUT:
Ada
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:00:37) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 > nome2):
	print(nome2)
	print(nome1.upper())
else:
	print(nome1.upper())
	print(nome2)
-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 22:00:48) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 > nome2):
	print(nome2)
	print(nome1.upper())
else:
	print(nome1.upper())
	print(nome2)
-- EXECUTION TIME:
0.144108
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:01:08) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 > nome2):
	print(nome2)
	print(nome1.upper())
else:
	print(nome1.upper())
	print(nome2)
-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:01:17) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 > nome2):
	print(nome2)
	print(nome1.upper())
else:
	print(nome1.upper())
	print(nome2)
-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:05:54) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 < nome2):
	print(nome1)
	print(nome2.upper())
else:
	print(nome2.upper())
	print(nome1)
-- OUTPUT:
Ada
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:06:36) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 < nome2):
	print(nome1)
	print(nome2)
else:
	print(nome2)
	print(nome1.upper())
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:08:13) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 < nome2):
	print(nome1.upper())
	print(nome2.upper())
else:
	print(nome2.upper())
	print(nome1.upper())
-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:09:25) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 < nome2.upper()):
	print(nome1)
	print(nome2)
else:
	print(nome2)
	print(nome1)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:24:33) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1.upper() < nome2:
	print(nome1)
	print(nome2)
else:
	print(nome2)
	print(nome1)
-- ERROR:
File "XXXX", line 3
    if (nome1.upper() < nome2:
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:24:48) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 < nome2.upper()):
	print(nome1)
	print(nome2)
else:
	print(nome2)
	print(nome1)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:25:09) 
-- CODE:
nome1 = input("Nome 1: ")
nome2 = input("Nome 2: ")
if (nome1 < nome2.upper()):
	print(nome1)
	print(nome2)
else:
	print(nome2)
	print(nome1)
-- EXECUTION TIME:
0.205767
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
